--- a/data-engineer.html
+++ b/data-engineer.html
@@ -97,7 +97,7 @@
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ringcentral/job/oCtsbfws'>RingCentral Careers - Manager, Data Engineering (Multiple Openings)</a></h5> 
+<h5><a href='https://jobs.jobvite.com/ringcentral/job/oCtsbfws'>RingCentral Careers - Manager, Data Engineering (Multiple Openings)</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -107,7 +107,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999697978452-data-engineer'>CapTech Consulting Data Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999697978452-data-engineer'>CapTech Consulting Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Denver, CO</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -163,7 +163,7 @@
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/1904labs/jobs/modern-data-engineer-cYDOAY-Ser6yzHaKiznY58'>Modern Data Engineer #0160 job at 1904labs in Saint Louis, MO, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/1904labs/jobs/modern-data-engineer-cYDOAY-Ser6yzHaKiznY58'>Modern Data Engineer #0160 job at 1904labs in Saint Louis, MO, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -191,7 +191,7 @@
 <p><span class="badge badge-light">Portland, OR  ?  Irvine</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=okpI9fwk&__jvst=Employee&__jvsd=s0RQZgwr&__jvsc=Twitter&bid=n3d9oMw4'>Schneider Electric NAM Careers - NAM Enterprise IT Data Services - Data Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=okpI9fwk&__jvst=Employee&__jvsd=s0RQZgwr&__jvsc=Twitter&bid=n3d9oMw4'>Schneider Electric NAM Careers - NAM Enterprise IT Data Services - Data Engineer</a></h5> 
 <p><span class="badge badge-light">Tennessee</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -233,7 +233,7 @@ headquartered in Menlo Park, California. We deliver innovative technology?...</p
 <p>14 oct. 2019 ... En tant que BI / Data Engineer, vous rejoignez l'?quipe Data compos?e de data 
 analysts et data scientists. Sous la supervision du Head of Data, votre r?le est?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/truedata/j/34914E9205'>Data Engineer - TrueData</a></h5> 
+<h5><a href='https://apply.workable.com/truedata/j/34914E9205'>Data Engineer - TrueData</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 15, 2019 ... TrueData is a leading mobile data platform that works with app publishers who 
 generate mobile data and the apps, agencies, brands, and ad tech companies?...</p>
@@ -254,7 +254,7 @@ business?...</p>
 <p>4 days ago ... Responsibilities for Data Engineer. Create and maintain optimal data pipeline 
 architecture,; Identify, design, and implement internal process improvements:?...</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qb59Vfw4&k=Job&j=oEcibfw3&__jvst=Employee+Referral&__jvsd=suXs5iwL&__jvsc=Twitter&bid=nnBcnMwO'>Infoblox Careers - Senior Data Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qb59Vfw4&k=Job&j=oEcibfw3&__jvst=Employee+Referral&__jvsd=suXs5iwL&__jvsc=Twitter&bid=nnBcnMwO'>Infoblox Careers - Senior Data Engineer</a></h5> 
 <p><span class="badge badge-light">Burnaby</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -264,7 +264,7 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">S?o Paulo S?o Paulo  S?o Paulo Brazil  S?o Paulo  S?o Paulo</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://avawomen.join.com/jobs/468006-data-engineer-80-100'>Job @ Ava (Z?rich): Data Engineer (80-100%) | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://avawomen.join.com/jobs/468006-data-engineer-80-100'>Job @ Ava (Z?rich): Data Engineer (80-100%) | JOIN</a></h5> 
 <p><span class="badge badge-light">Z?rich, Switzerland  San Francisco Belgrade</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -284,7 +284,7 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">Berlin Berlin</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/averityteam/job/s5oyk6kgz7bxbg55nuy8o87j5c'>Senior Data Engineer | Averity</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/s5oyk6kgz7bxbg55nuy8o87j5c'>Senior Data Engineer | Averity</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -330,7 +330,7 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999698331529-data-engineer-with-crm-etl-design-sql-python'>Bey Data Engineer with CRM, ETL design, SQL, Python | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Bey/743999698331529-data-engineer-with-crm-etl-design-sql-python'>Bey Data Engineer with CRM, ETL design, SQL, Python | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA San Mateo</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -410,7 +410,7 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">Boston, Massachusetts</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Devoteam/743999698254432-data-engineering-consultant'>Devoteam Data Engineering Consultant | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Devoteam/743999698254432-data-engineering-consultant'>Devoteam Data Engineering Consultant | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Stockholm, Sweden  Stockholm</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -438,7 +438,7 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">Los Angeles, California</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://welltok.applytojob.com/apply/Ee7yHBXC4t/Software-Data-Engineering-Manager'>Software Data Engineering Manager - Welltok - Career Page</a></h5> 
+<h5><a href='https://welltok.applytojob.com/apply/Ee7yHBXC4t/Software-Data-Engineering-Manager'>Software Data Engineering Manager - Welltok - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 16, 2019 ... Apply to Software Data Engineering Manager at Welltok in Boston, MA.</p>
 <hr/>
@@ -446,7 +446,7 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698051746--senior-data-engineer-business-intelligence-platform-berlin-m-f-d-'>Omio (Senior) Data Engineer / Business Intelligence Platform / Berlin (m / f / d) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698051746--senior-data-engineer-business-intelligence-platform-berlin-m-f-d-'>Omio (Senior) Data Engineer / Business Intelligence Platform / Berlin (m / f / d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -454,7 +454,7 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">Toronto, Ontario  Canada Canada</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/simplybusiness/07371492-0a65-4ad8-9a13-08c98ce465f7'>Simply Business - Junior Data Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/simplybusiness/07371492-0a65-4ad8-9a13-08c98ce465f7'>Simply Business - Junior Data Engineer</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
